--- a/.CHANGELOG.md.overview.jinja2
+++ b/.CHANGELOG.md.overview.jinja2
@@ -1,6 +1,6 @@
 ### [Unreleased]
 
-### [{{ version }}] - {{ today }}
+### [{{ new_version }}] - {{ today }}
 {% for name, notes in sections.items() -%}
 {% if notes -%}
 #### {{ name.title() }}
@@ -9,4 +9,4 @@
 {% endfor %}
 {%- endif %}
 {%- endfor %}
-### [{{ prev_version }}]
+### [{{ old_version }}]
