--- a/assets/.cl.links.jinja2
+++ b/assets/.cl.links.jinja2
@@ -1,3 +1,3 @@
-[Unreleased]: https://github.com/{{ context.repo }}/compare/{{ version }}...HEAD
-[{{ version }}]: https://github.com/{{ context.repo }}/compare/{{ prev_version }}...{{ version }}
+[Unreleased]: https://github.com/{{ context.git.repo }}/compare/{{ new_version }}...HEAD
+[{{ new_version }}]: https://github.com/{{ context.git.repo }}/compare/{{ old_version }}...{{ new_version }}
 
