--- a/assets/.cl.overview.jinja2
+++ b/assets/.cl.overview.jinja2
@@ -1,12 +1,14 @@
 ### [Unreleased]
 
 ### [{{ new_version }}] - {{ today }}
+
 {% for name, notes in sections.items() -%}
 {% if notes -%}
 #### {{ name.title() }}
 {% for note in notes -%}
 - {{ note }}
 {% endfor %}
-{%- endif %}
-{%- endfor %}
+{% endif %}
+
+{%- endfor -%}
 ### [{{ old_version }}]
