Working on unreleased add

--- a/assets/.cl.overview.jinja2
+++ b/assets/.cl.overview.jinja2
@@ -1,6 +1,8 @@
 ### [Unreleased]
 
+{%- if new_version - %}
 ### [{{ new_version }}] - {{ today }}
+{%- endif -%}
 
 {% for name, notes in sections.items() -%}
 {% if notes -%}
