--- a/changelogger/templates/.cl.overview.jinja2
+++ b/changelogger/templates/.cl.overview.jinja2
@@ -1,14 +1,3 @@
 ### [Unreleased]
-{% if new_version %}
-### [{{ new_version }}] - {{ today }}
-{% endif %}
-{% for name, notes in sections.items() -%}
-{% if notes -%}
-#### {{ name.title() }}
-{% for note in notes -%}
-- {{ note }}
-{% endfor %}
-{% endif %}
-
-{%- endfor -%}
+{% include '.cl.overview_inner.jinja2' -%}
 ### [{{ old_version }}]
